--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "massive": "^4.0.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
