--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3080",
   "main": "./server/index.js",
   "dependencies": {
+    "@auth0/styleguide-react-components": "^1.0.2",
     "axios": "^0.16.2",
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
@@ -15,13 +16,16 @@
     "npm-run-all": "^4.1.1",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.30.10",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
-    "redux-promise-middleware": "^4.4.1"
+    "redux-promise-middleware": "^4.4.1",
+    "stripe": "^5.1.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
